--- a/src/librustc_yk_link/Cargo.toml
+++ b/src/librustc_yk_link/Cargo.toml
@@ -7,13 +7,6 @@ version = "0.0.0"
 name = "rustc_yk_link"
 path = "lib.rs"
 test = false
+crate-type = ["dylib"]
 
 [dependencies]
-#rustc = {path = "../librustc"}
-#rustc_metadata = {path = "../librustc_metadata"}
-#rustc_data_structures = {path = "../librustc_data_structures"}
-#rustc_yk_link = { path = "../librustc_yk_link" }
-#bincode = "1.0"
-#serde = "1.0"
-#serde_derive = "1.0"
-#mkstemp-rs = "1.0"
