Gate-off existing hardware tracing label support.
We are going to move our focus to a software tracer until either LLVM
DILabel support matures, or until our own codegen is completed.
We do this by adding a `yk_hwt` compile-time gate, which is off by
default.

I've left our (harmless) changes to the backend traits as they would be
awkward to gate (signature change would require a copy of the
functions).

Since we won't be using DILabels just yet, we no longer need a bleeding
edge LLVM (and actually Rust synced a newer LLVM recently anyway).

While we are here, enable compiler tests and bump the bors timeout.

(Timeout also bumped on the buildbot master).

--- a/bors.toml
+++ b/bors.toml
@@ -3,8 +3,8 @@ status = [
   "buildbot/buildbot-build-script"
 ]
 
-# Allow two hours for builds.
-timeout_sec = 7200
+# Allow eight hours for builds + tests.
+timeout_sec = 28800
 
 # Have bors delete auto-merged branches
 delete_merged_branches = true
