--- a/src/librustc_yk_sections/Cargo.toml
+++ b/src/librustc_yk_sections/Cargo.toml
@@ -12,5 +12,5 @@ test = false
 [dependencies]
 rustc = {path = "../librustc"}
 rustc_yk_link = { path = "../librustc_yk_link" }
-mkstemp-rs = "1.0"
+rustc_codegen_utils = { path = "../librustc_codegen_utils" }
 byteorder = "1.2"
